--- a/SendMailApp/MainWindow.xaml
+++ b/SendMailApp/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SendMailApp"
         mc:Ignorable="d"
-        Title="メール送信アプリ" Height="500" Width="600" Background="Azure">
+        Title="メール送信アプリ" Height="400" Width="600" Background="Azure">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
@@ -19,24 +19,24 @@
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="9*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="件名：" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <TextBox Grid.Column="1" Margin="4"/>
+        <TextBlock Text="件名：" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+        <TextBox x:Name="tbTitle" Grid.Column="1" Margin="4"/>
 
-        <TextBlock Grid.Row="1" Text="To：" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <TextBox Grid.Row="1" Grid.Column="2" Margin="4"/>
+        <TextBlock Grid.Row="1" Text="To  ：" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+        <TextBox x:Name="tbTo" Grid.Row="1" Grid.Column="2" Margin="4"/>
 
-        <TextBlock Grid.Row="2" Text="Cc：" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <TextBox Grid.Row="2" Grid.Column="2" Margin="4"/>
+        <TextBlock Grid.Row="2" Text="Cc  ：" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+        <TextBox x:Name="tbCc" Grid.Row="2" Grid.Column="2" Margin="4"/>
 
-        <TextBlock Grid.Row="3" Text="Bcc：" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <TextBox Grid.Row="3" Grid.Column="2" Margin="4"/>
+        <TextBlock Grid.Row="3" Text="Bcc ：" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+        <TextBox x:Name="tbBcc" Grid.Row="3" Grid.Column="2" Margin="4"/>
 
-        <TextBlock Grid.Row="4" Text="本文：" FontSize="18" VerticalAlignment="Top" HorizontalAlignment="Center"/>
-        <TextBox Grid.Row="4" Grid.Column="2" Margin="4"/>
+        <TextBlock Grid.Row="4" Text="本文：" FontSize="18" VerticalAlignment="Top" HorizontalAlignment="Right"/>
+        <TextBox x:Name="tbBody" Grid.Row="4" Grid.Column="2" Margin="4"/>
 
-        <StackPanel Grid.Row="5" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Content="送信" Width="100" Margin="10,10,3,10"/>
-            <Button Content="キャンセル" Width="100" Margin="10,10,3,10"/>
+        <StackPanel Grid.Row="5" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button Content="キャンセル" Width="100" Margin="5"/>
+            <Button Content="送信" Width="100" Margin="5"/>
         </StackPanel>
     </Grid>
 </Window>
