--- a/SendMailApp/MainWindow.xaml
+++ b/SendMailApp/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SendMailApp"
         mc:Ignorable="d"
-        Title="メール送信アプリ" Height="400" Width="600" Background="Azure" Loaded="Window_Loaded">
+        Title="メール送信アプリ" Height="400" Width="600" Background="Azure" Loaded="Window_Loaded" Closed="Window_Closed">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
