--- a/SendMailApp/ConfigWindow.xaml
+++ b/SendMailApp/ConfigWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SendMailApp"
         mc:Ignorable="d"
-        Title="メール送信設定" Height="400" Width="700" ResizeMode="NoResize" Loaded="Window_Loaded">
+        Title="メール送信設定" Height="400" Width="700" ResizeMode="NoResize" Loaded="Window_Loaded" Closing="Window_Closing">
     <Grid Background="Azure">
         <Grid.RowDefinitions>
             <RowDefinition Height="4*"/>
